# NFParam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
buildconf/: bridge.json
ci/: .nfbuildlinux.py.swp  .osx.py.swp  Brewfile  ci.yaml  ios.py  linux.py  linux.sh  llvm-run.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  osx.py  osx.sh
include/NFParam/: Param.h  ParamEvent.h
libraries/: CMakeLists.txt
resources/: paramAutomationExpected.txt  params.gp  plot.sh
source/: CMakeLists.txt  ParamEvent.cpp  ParamImplementation.cpp  ParamImplementation.h  WAAParamEvents.cpp  WAAParamEvents.h
source/test/: CMakeLists.txt  NFParamTests.cpp
